Week 1 - Day 1: Completed exercises and lectures

--- a/week1/day2 EXERCISE.ipynb
+++ b/week1/day2 EXERCISE.ipynb
@@ -68,59 +68,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:47:46.189107Z",
+     "start_time": "2025-10-11T08:47:45.524771Z"
+    }
+   },
    "source": [
     "# imports\n",
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from IPython.display import Markdown, display"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "29ddd15d-a3c5-4f4e-a678-873f56162724",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:47:48.404344Z",
+     "start_time": "2025-10-11T08:47:48.398458Z"
+    }
+   },
    "source": [
     "# Constants\n",
     "\n",
     "OLLAMA_API = \"http://localhost:11434/api/chat\"\n",
     "HEADERS = {\"Content-Type\": \"application/json\"}\n",
     "MODEL = \"llama3.2\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "dac0a679-599c-441f-9bf2-ddc73d35b940",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:47:49.817627Z",
+     "start_time": "2025-10-11T08:47:49.811839Z"
+    }
+   },
    "source": [
     "# Create a messages list using the same format that we used for OpenAI\n",
     "\n",
     "messages = [\n",
     "    {\"role\": \"user\", \"content\": \"Describe some of the business applications of Generative AI\"}\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7bb9c624-14f0-4945-a719-8ddb64f66f47",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:47:50.704694Z",
+     "start_time": "2025-10-11T08:47:50.699976Z"
+    }
+   },
    "source": [
     "payload = {\n",
     "        \"model\": MODEL,\n",
     "        \"messages\": messages,\n",
     "        \"stream\": False\n",
     "    }"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -136,10 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "42b9f644-522d-4e05-a691-56e7658c0ea9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:49:13.902894Z",
+     "start_time": "2025-10-11T08:47:56.498680Z"
+    }
+   },
    "source": [
     "# If this doesn't work for any reason, try the 2 versions in the following cells\n",
     "# And double check the instructions in the 'Recap on installation of Ollama' at the top of this lab\n",
@@ -147,7 +170,37 @@
     "\n",
     "response = requests.post(OLLAMA_API, json=payload, headers=HEADERS)\n",
     "print(response.json()['message']['content'])"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative AI has numerous business applications across various industries, including:\n",
+      "\n",
+      "1. **Content Generation**: Companies can use generative AI to generate high-quality content such as articles, blog posts, social media posts, and product descriptions, saving time and resources.\n",
+      "2. **Product Design**: Generative AI can be used to design new products, such as furniture, clothing, or electronics, by generating 3D models, prototypes, and even entire product lines.\n",
+      "3. **Marketing and Advertising**: Generative AI can help create personalized marketing campaigns, ad copy, and social media posts, making them more targeted and effective.\n",
+      "4. **Customer Service**: Chatbots powered by generative AI can provide 24/7 customer support, answering questions, and helping customers with queries.\n",
+      "5. **Data Analysis and Visualization**: Generative AI can be used to analyze large datasets, identify patterns, and generate visualizations, making it easier for businesses to make data-driven decisions.\n",
+      "6. **Image and Video Generation**: Companies can use generative AI to create high-quality images and videos for marketing materials, product demonstrations, or even training content.\n",
+      "7. **Predictive Maintenance**: Generative AI can be used to predict equipment failures, reducing downtime and increasing overall efficiency in industries such as manufacturing and logistics.\n",
+      "8. **Speech Synthesis**: Generative AI-powered speech synthesis can help create synthetic voices for e-learning platforms, customer service, and other applications where natural-sounding voices are required.\n",
+      "9. **Music and Audio Generation**: Generative AI can be used to create new music tracks, sound effects, or even entire albums, revolutionizing the music industry.\n",
+      "10. **Creative Writing and Storytelling**: Generative AI can assist writers with generating ideas, completing stories, or even creating entire scripts for films, TV shows, or video games.\n",
+      "\n",
+      "Some specific business applications of generative AI include:\n",
+      "\n",
+      "* **Hulu's Movie Recommendation System**: uses generative AI to recommend movies based on user preferences.\n",
+      "* **Uber's Autonomous Vehicles**: uses generative AI to predict traffic patterns and optimize routes.\n",
+      "* **Airbnb's Personalized Recommendations**: uses generative AI to suggest suitable listings for users based on their interests and preferences.\n",
+      "* **Microsoft's Azure AI Platform**: provides a platform for businesses to build, deploy, and manage AI models using generative AI.\n",
+      "\n",
+      "These are just a few examples of the many business applications of generative AI. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -162,17 +215,87 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:50:28.430405Z",
+     "start_time": "2025-10-11T08:50:23.359359Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
+   "source": "!pip install ollama",
+   "id": "4d31181a3c641186",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ollama\n",
+      "  Downloading ollama-0.6.0-py3-none-any.whl.metadata (4.3 kB)\n",
+      "Requirement already satisfied: httpx>=0.27 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ollama) (0.28.1)\n",
+      "Requirement already satisfied: pydantic>=2.9 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ollama) (2.11.5)\n",
+      "Requirement already satisfied: anyio in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx>=0.27->ollama) (4.9.0)\n",
+      "Requirement already satisfied: certifi in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx>=0.27->ollama) (2025.6.15)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx>=0.27->ollama) (1.0.9)\n",
+      "Requirement already satisfied: idna in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx>=0.27->ollama) (3.10)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpcore==1.*->httpx>=0.27->ollama) (0.16.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic>=2.9->ollama) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic>=2.9->ollama) (2.33.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.12.2 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic>=2.9->ollama) (4.14.0)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic>=2.9->ollama) (0.4.1)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\lenovo\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio->httpx>=0.27->ollama) (1.3.1)\n",
+      "Downloading ollama-0.6.0-py3-none-any.whl (14 kB)\n",
+      "Installing collected packages: ollama\n",
+      "Successfully installed ollama-0.6.0\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
    "id": "7745b9c4-57dc-4867-9180-61fa5db55eb8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:51:47.637649Z",
+     "start_time": "2025-10-11T08:50:29.981786Z"
+    }
+   },
    "source": [
     "import ollama\n",
     "\n",
     "response = ollama.chat(model=MODEL, messages=messages)\n",
     "print(response['message']['content'])"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative AI has numerous business applications across various industries. Here are some examples:\n",
+      "\n",
+      "1. **Content Generation**: Generative AI can be used to generate high-quality content, such as articles, social media posts, product descriptions, and more. This can help businesses save time and resources on content creation.\n",
+      "2. **Image and Video Generation**: Generative AI can create realistic images and videos that can be used for various purposes, such as advertising, marketing, and entertainment. For example, it can generate product images, logos, or even entire scenes for movies and TV shows.\n",
+      "3. **Chatbots and Virtual Assistants**: Generative AI can power chatbots and virtual assistants that provide customer support, answer questions, and engage with users in a more human-like way.\n",
+      "4. **Predictive Maintenance and Quality Control**: Generative AI can analyze sensor data from machines and predict when maintenance is needed, reducing downtime and increasing overall efficiency.\n",
+      "5. **Recommendation Systems**: Generative AI can help personalize product recommendations based on user behavior, preferences, and historical data.\n",
+      "6. **Marketing Automation**: Generative AI can automate marketing campaigns by generating personalized emails, social media posts, and ads that are tailored to specific customer segments.\n",
+      "7. **Data Analysis and Visualization**: Generative AI can help analyze complex data sets and generate visualizations that provide insights into patterns and trends.\n",
+      "8. **Creative Writing and Design**: Generative AI can be used to generate creative content such as poetry, music, or even entire scripts for movies and TV shows.\n",
+      "9. **Supply Chain Optimization**: Generative AI can analyze supply chain data and predict demand, helping businesses optimize inventory management and logistics.\n",
+      "10. **Customer Experience**: Generative AI can help create personalized customer experiences by generating customized messages, offers, and content that are tailored to individual customers' needs.\n",
+      "\n",
+      "Some specific industries where Generative AI is being applied include:\n",
+      "\n",
+      "1. **Finance**: Generating financial reports, analyzing market trends, and creating investment recommendations.\n",
+      "2. **Healthcare**: Analyzing medical data, generating personalized treatment plans, and creating diagnostic tools.\n",
+      "3. **Retail**: Generating product descriptions, recommending products based on customer behavior, and optimizing inventory management.\n",
+      "4. **Media and Entertainment**: Generating content such as news articles, social media posts, and even entire scripts for movies and TV shows.\n",
+      "\n",
+      "These are just a few examples of the many business applications of Generative AI. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -184,10 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "23057e00-b6fc-4678-93a9-6b31cb704bff",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T08:53:22.711878Z",
+     "start_time": "2025-10-11T08:51:54.463851Z"
+    }
+   },
    "source": [
     "# There's actually an alternative approach that some people might prefer\n",
     "# You can use the OpenAI client python library to call Ollama:\n",
@@ -201,7 +327,43 @@
     ")\n",
     "\n",
     "print(response.choices[0].message.content)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative AI has numerous business applications across various industries, including:\n",
+      "\n",
+      "1. **Content Creation**: AI-powered tools can generate high-quality content such as blog posts, product descriptions, social media posts, and more, reducing content creation costs and increasing efficiency.\n",
+      "2. **Product Design and Development**: Generative AI algorithms can create new product designs, optimize existing ones, and even predict customer preferences, leading to improved product development and marketing strategies.\n",
+      "3. **Image and Video Generation**: Businesses can use generative AI to create personalized images, videos, and animations for advertising, training materials, or other marketing purposes.\n",
+      "4. **Natural Language Processing (NLP)**: Generative AI models can be used for chatbots, virtual assistants, and language translation, enabling businesses to automate customer support and improve communication with clients.\n",
+      "5. **Predictive Maintenance**: Generative AI algorithms can analyze sensor data from machines and predict when maintenance is required, reducing downtime and increasing overall efficiency.\n",
+      "6. **Personalization**: Generative AI can help businesses personalize products, services, and experiences for individual customers based on their behavior, preferences, and demographics.\n",
+      "7. **Marketing Automation**: Generative AI-powered tools can automate marketing processes such as lead generation, email campaigns, and social media posting, saving time and resources.\n",
+      "8. **Data Analysis and Visualization**: Generative AI algorithms can analyze and visualize complex data patterns, enabling businesses to make better-informed decisions and identify trends in their data.\n",
+      "9. **Creative Writing and Proofreading**: Generative AI models can assist with creative writing tasks such as generating ideas, outlining content, or even proofreading text for errors and suggestions.\n",
+      "10. **Customer Service AI**: Generative AI-powered chatbots can handle customer inquiries, provide technical support, and route complex issues to human representatives.\n",
+      "\n",
+      "Some specific examples of businesses using generative AI include:\n",
+      "\n",
+      "* **Content mills:** AI-generated articles, social media posts, and product descriptions are produced in large quantities for clients.\n",
+      "* **E-commerce companies:** AI-powered tools are used to generate product recommendations, personalized content, and chatbot-based customer support.\n",
+      "* **Digital marketing agencies:** Generative AI is used to automate email marketing campaigns, social media posting, and content generation.\n",
+      "\n",
+      "However, it's essential to note that generative AI adoption in businesses also raises concerns around:\n",
+      "\n",
+      "* Data ownership\n",
+      "* Content quality and authenticity\n",
+      "* Bias and discrimination risks\n",
+      "* Job displacement for human creatives\n",
+      "\n",
+      "To address these concerns, businesses should carefully evaluate the benefits of generative AI against potential drawbacks, establish clear guidelines for AI use, and ensure transparency about AI-generated content.\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
