--- a/week1/troubleshooting.ipynb
+++ b/week1/troubleshooting.ipynb
@@ -40,10 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "d296f9b6-8de4-44db-b5f5-9b653dfd3d81",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:26.761016Z",
+     "start_time": "2025-10-11T07:36:26.141688Z"
+    }
+   },
    "source": [
     "import urllib.request\n",
     "\n",
@@ -55,7 +58,17 @@
     "        print(\"Connected to the internet and can reach Google\")\n",
     "except Exception as e:\n",
     "    print(f\"Failed to connect with this error: {e}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to the internet and can reach Google\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -101,10 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7c8c0bb3-0e94-466e-8d1a-4dfbaa014cbe",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:26.825203Z",
+     "start_time": "2025-10-11T07:36:26.816315Z"
+    }
+   },
    "source": [
     "# Some quick checks that your Conda environment or VirtualEnv is as expected\n",
     "# The Environment Name should be: llms\n",
@@ -130,7 +146,19 @@
     "    print(\"Neither Anaconda nor Virtualenv seem to be activated with the expected name 'llms' or 'venv'\")\n",
     "    print(\"Did you run 'jupyter lab' from an activated environment with (llms) showing on the command line?\")\n",
     "    print(\"If in doubt, close down all jupyter lab, and follow Part 5 in the SETUP-PC or SETUP-mac guide.\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neither Anaconda nor Virtualenv seem to be activated with the expected name 'llms' or 'venv'\n",
+      "Did you run 'jupyter lab' from an activated environment with (llms) showing on the command line?\n",
+      "If in doubt, close down all jupyter lab, and follow Part 5 in the SETUP-PC or SETUP-mac guide.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -164,15 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6c78b7d9-1eea-412d-8751-3de20c0f6e2f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:27.705688Z",
+     "start_time": "2025-10-11T07:36:26.854549Z"
+    }
+   },
    "source": [
     "# This import should work if your environment is active and dependencies are installed!\n",
     "\n",
     "from openai import OpenAI"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -201,10 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "caa4837e-b970-4f89-aa9a-8aa793c754fd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:28.120027Z",
+     "start_time": "2025-10-11T07:36:28.101617Z"
+    }
+   },
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -239,7 +275,17 @@
     "        print(\"\\nWarning: No '.env' file found, but the following files were found in the llm_engineering directory that contain '.env' in the name. Perhaps this needs to be renamed?\")\n",
     "        for file in possible_misnamed_files:\n",
     "            print(file.name)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".env file not found in the llm_engineering directory. It needs to have exactly the name: .env\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -254,10 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ab9ea6ef-49ee-4899-a1c7-75a8bd9ac36b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:28.298034Z",
+     "start_time": "2025-10-11T07:36:28.278844Z"
+    }
+   },
    "source": [
     "# Only run this code in this cell if you want to have a .env file created for you!\n",
     "\n",
@@ -284,7 +333,19 @@
     "        print(\"Now rerun the previous cell to confirm that the file is created and the key is correct.\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while creating the .env file: {e}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created the .env file at ..\\.env\n",
+      "The key that you provided started with 'put your' which is different to sk-proj- is that what you intended?\n",
+      "Now rerun the previous cell to confirm that the file is created and the key is correct.\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -299,10 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0ee8e613-5a6e-4d1f-96ef-91132da545c8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T07:36:28.374259Z",
+     "start_time": "2025-10-11T07:36:28.338313Z"
+    }
+   },
    "source": [
     "# This should print your API key to the output - please follow the instructions that get printed\n",
     "\n",
@@ -337,7 +401,22 @@
     "print(f\"\\nHere is the key --> {api_key} <--\")\n",
     "print()\n",
     "print(\"If this key looks good, please go to the Edit menu >> Clear Cell Output so that your key is no longer displayed here!\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An API key was found, but it starts with put your rather than sk-proj- please double check this is as expected.\n",
+      "Potential problem: there are quote marks, spaces or empty lines in your key?\n",
+      "\n",
+      "Here is the key --> put your key here inside these quotes.. it should start sk-proj- <--\n",
+      "\n",
+      "If this key looks good, please go to the Edit menu >> Clear Cell Output so that your key is no longer displayed here!\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -371,10 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "cccb58e7-6626-4033-9dc1-e7e3ff742f6b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
@@ -391,7 +468,9 @@
     ")\n",
     "print(completion.choices[0].message.content)\n",
     "print(\"Now go to Edit menu >> Clear Cell Output to remove the display of your key.\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
