Week 1 - Day 2: Completed exercises and lectures

--- a/week1/Intermediate Python.ipynb
+++ b/week1/Intermediate Python.ipynb
@@ -68,10 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5802e2f0-0ea0-4237-bbb7-f375a34260f0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:26.475110Z",
+     "start_time": "2025-10-11T18:21:26.463603Z"
+    }
+   },
    "source": [
     "# First let's create some things:\n",
     "\n",
@@ -83,7 +86,9 @@
     "book4 = {\"title\": \"Moby Dick\", \"author\": \"Herman Melville\"}\n",
     "\n",
     "books = [book1, book2, book3, book4]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -95,23 +100,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "61992bb8-735d-4dad-8747-8c10b63aec82",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:26.641641Z",
+     "start_time": "2025-10-11T18:21:26.633323Z"
+    }
+   },
    "source": [
     "# Simple enough to start\n",
     "\n",
     "for fruit in fruits:\n",
     "    print(fruit)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apples\n",
+      "Bananas\n",
+      "Pears\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c89c3842-9b74-47fa-8424-0fcb08e4177c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:26.762005Z",
+     "start_time": "2025-10-11T18:21:26.744906Z"
+    }
+   },
    "source": [
     "# Let's make a new version of fruits\n",
     "\n",
@@ -120,82 +143,192 @@
     "    fruits_shouted.append(fruit.upper())\n",
     "\n",
     "fruits_shouted"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS', 'PEARS']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4ec13b3a-9545-44f1-874a-2910a0663560",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:26.881853Z",
+     "start_time": "2025-10-11T18:21:26.866433Z"
+    }
+   },
    "source": [
     "# You probably already know this\n",
     "# There's a nice Python construct called \"list comprehension\" that does this:\n",
     "\n",
     "fruits_shouted2 = [fruit.upper() for fruit in fruits]\n",
     "fruits_shouted2"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS', 'PEARS']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ecc08c3c-181d-4b64-a3e1-b0ccffc6c0cd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:26.978576Z",
+     "start_time": "2025-10-11T18:21:26.954941Z"
+    }
+   },
    "source": [
     "# But you may not know that you can do this to create dictionaries, too:\n",
     "\n",
     "fruit_mapping = {fruit: fruit.upper() for fruit in fruits}\n",
     "fruit_mapping"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Apples': 'APPLES', 'Bananas': 'BANANAS', 'Pears': 'PEARS'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "500c2406-00d2-4793-b57b-f49b612760c8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:27.057187Z",
+     "start_time": "2025-10-11T18:21:27.043071Z"
+    }
+   },
    "source": [
     "# you can also use the if statement to filter the results\n",
     "\n",
     "fruits_with_longer_names_shouted = [fruit.upper() for fruit in fruits if len(fruit)>5]\n",
     "fruits_with_longer_names_shouted"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "38c11c34-d71e-45ba-945b-a3d37dc29793",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:27.092562Z",
+     "start_time": "2025-10-11T18:21:27.081315Z"
+    }
+   },
    "source": [
     "fruit_mapping_unless_starts_with_a = {fruit: fruit.upper() for fruit in fruits if not fruit.startswith('A')}\n",
     "fruit_mapping_unless_starts_with_a"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Bananas': 'BANANAS', 'Pears': 'PEARS'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5c97d8e8-31de-4afa-973e-28d8e5cab749",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:27.196784Z",
+     "start_time": "2025-10-11T18:21:27.181600Z"
+    }
+   },
    "source": [
     "# Another comprehension\n",
     "\n",
     "[book['title'] for book in books]"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Great Expectations', 'Bleak House', 'An Book By No Author', 'Moby Dick']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "50be0edc-a4cd-493f-a680-06080bb497b4",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:21:28.133770Z",
+     "start_time": "2025-10-11T18:21:27.288994Z"
+    }
+   },
    "source": [
     "# This code will fail with an error because one of our books doesn't have an author\n",
     "\n",
     "[book['author'] for book in books]"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'author'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# This code will fail with an error because one of our books doesn't have an author\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m [\u001B[43mbook\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mauthor\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;28;01mfor\u001B[39;00m book \u001B[38;5;129;01min\u001B[39;00m books]\n",
+      "\u001B[31mKeyError\u001B[39m: 'author'"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -402,10 +535,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "905ba603-15d8-4d01-9a79-60ec293d7ca1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-11T18:23:53.229122Z",
+     "start_time": "2025-10-11T18:23:45.893817Z"
+    }
+   },
    "source": [
     "# And for some fun - press the stop button in the toolbar when bored!\n",
     "# It's like we've made our own Large Language Model... although not particularly large..\n",
@@ -421,19 +557,40 @@
     "\n",
     "def infinite_random_sentences():\n",
     "    while True:\n",
-    "        yield from random.choice(pronouns)\n",
+    "        yield random.choice(pronouns)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(verbs)\n",
+    "        yield random.choice(verbs)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(adjectives)\n",
+    "        yield random.choice(adjectives)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(nouns)\n",
+    "        yield random.choice(nouns)\n",
     "        yield \". \"\n",
     "\n",
     "for letter in infinite_random_sentences():\n",
     "    print(letter, end=\"\", flush=True)\n",
     "    time.sleep(0.02)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They tap dance on arrogant wombats. They juggle overripe spreadsheets. We dramatically renounce pleasing jellyfish. I deny the existence of overripe eels. We impersonate festering bagpipes. You bathe in overripe walruses. They pontificate about pretentious jellyfish. I tap dance on pretentious monocles. You bathe in festering kumquats. We philosophize about bewildered kumquats. You impersonate turqoise spreadsheets. I deny the existence of wobbly walruses. They conspire with disheveled rodents. You secretly collect fluorescent kumquats. We eat pretentious spreadsheets. You misplace festering thermostats. We eat festering jellyfish. You juggle bewildered mustaches. I philosophize about festering eels. I bathe in bewildered thermostats. We pontificate about wobbly bagpipes. I impersonate turqoise spreadsheets. You conspire with turqoise spreadsheets. You detest fluorescent walruses. We detest pompous eels. They secretly collect turqoise eels. You secretly collect whimsical rodents. I philosophize about disheveled monocles. You bathe in turqoise mustaches. We misplace whimsical accordions. You bathe in bewildered calculators. You resent pompous thermostats. They detest festering jellyfish. I dramatically renounce melodramatic rodents. I resent pompous rodents. They deny the existence of smelly bagpipes. I philosophize about arrogant calculators. I secretly collect suspicious wombats. They dramatically renounce festering rodents. We impersonate pretentious walruses. We juggle smelly jellyfish. They bathe in whimsical rodents"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[11]\u001B[39m\u001B[32m, line 26\u001B[39m\n\u001B[32m     24\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m letter \u001B[38;5;129;01min\u001B[39;00m infinite_random_sentences():\n\u001B[32m     25\u001B[39m     \u001B[38;5;28mprint\u001B[39m(letter, end=\u001B[33m\"\u001B[39m\u001B[33m\"\u001B[39m, flush=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m---> \u001B[39m\u001B[32m26\u001B[39m     \u001B[43mtime\u001B[49m\u001B[43m.\u001B[49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m0.02\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
