--- a/week1/day2 EXERCISE.ipynb
+++ b/week1/day2 EXERCISE.ipynb
@@ -80,7 +80,9 @@
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from IPython.display import Markdown, display"
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "from week1.day1 import Website"
    ],
    "outputs": [],
    "execution_count": 1
@@ -447,11 +449,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6de38216-6d1c-48c4-877b-86d403f4e0f8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T13:33:57.384148Z",
+     "start_time": "2025-10-12T13:33:55.800615Z"
+    }
+   },
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from IPython.display import Markdown, display\n",
+    "import ollama"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:36:54.781853Z",
+     "start_time": "2025-10-12T14:36:54.777622Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "headers = {\n",
+    " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
+    "}"
+   ],
+   "id": "f77d863123d3e6b3",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:36:34.017808Z",
+     "start_time": "2025-10-12T14:36:34.011940Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class Website:\n",
+    "\n",
+    "    def __init__(self, url):\n",
+    "        \"\"\"\n",
+    "        Create this Website object from the given url using the BeautifulSoup library\n",
+    "        \"\"\"\n",
+    "        self.url = url\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        self.title = soup.title.string if soup.title else \"No title found\"\n",
+    "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
+    "            irrelevant.decompose()\n",
+    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)"
+   ],
+   "id": "38641048c2827725",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:33:58.238015Z",
+     "start_time": "2025-10-12T14:33:58.231582Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "MODEL = \"llama3.2\"",
+   "id": "70c891fa97c2e945",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:33:59.991262Z",
+     "start_time": "2025-10-12T14:33:59.984766Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def user_prompt_for(website):\n",
+    "    user_prompt = f\"You are looking at a website titled {website.title}\"\n",
+    "    user_prompt += \"\\nThe contents of this website is as follows; \\\n",
+    "please provide a short summary of this website in markdown. \\\n",
+    "If it includes news or announcements, then summarize these too.\\n\\n\"\n",
+    "    user_prompt += website.text\n",
+    "    return user_prompt\n"
+   ],
+   "id": "ebc7c1d3736691f4",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:34:01.547907Z",
+     "start_time": "2025-10-12T14:34:01.541846Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def message_for_website(website):\n",
+    "    system_prompt = \"You are an assistant that analyzes the contents of a website \\\n",
+    "and provides a short summary, ignoring text that might be navigation related. \\\n",
+    "Respond in markdown.\"\n",
+    "    return [\n",
+    "        {\"role\": \"system\", \"content\": system_prompt},\n",
+    "        {\"role\": \"user\", \"content\": user_prompt_for(website)},\n",
+    "    ]"
+   ],
+   "id": "36ebc4820f9b1f1",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:34:03.301408Z",
+     "start_time": "2025-10-12T14:34:03.294272Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def display_summary(url):\n",
+    "    website = Website(url)\n",
+    "    response = ollama.chat(model=MODEL, messages=message_for_website(website))\n",
+    "    return response['message']['content']"
+   ],
+   "id": "4a4a5e2d62df4b6",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T14:38:36.233127Z",
+     "start_time": "2025-10-12T14:36:58.944992Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(display_summary(\"https://edwarddonner.com\"))",
+   "id": "153c3b90ee80933f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Summary of the Website**\n",
+      "==========================\n",
+      "\n",
+      "### About the Founder and Company\n",
+      "\n",
+      "The website is owned by Edward Donner, a co-founder and CTO of Nebula.io. He shares his passion for writing code, experimenting with LLMs (Large Language Models), and DJing.\n",
+      "\n",
+      "Nebula.io applies AI to help people discover their potential and pursue their reason for being. The company has patented its matching model and has an award-winning platform in place.\n",
+      "\n",
+      "### Recent News and Announcements\n",
+      "\n",
+      "* **September 15, 2025**: \"AI in Production: Gen AI and Agentic AI on AWS at scale\"\n",
+      "* **May 28, 2025**: \"Connecting my courses – become an LLM expert and leader\"\n",
+      "* **May 18, 2025**: \"2025 AI Executive Briefing\"\n",
+      "* **April 21, 2025**: \"The Complete Agentic AI Engineering Course\"\n",
+      "\n",
+      "### Personal Contact Information\n",
+      "\n",
+      "Edward Donner can be reached at [ed@edwarddonner.com](mailto:ed@edwarddonner.com) or through his LinkedIn and Twitter profiles.\n",
+      "None\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9dae3e73341da06a"
   }
  ],
  "metadata": {
